--- a/project-react-app/src/App.css
+++ b/project-react-app/src/App.css
@@ -15,3 +15,11 @@ a {
 footer p {
     margin: 0
 }
+
+
+.AboutPage,
+.NotFoundPage,
+.RecipesDetailsPage {
+    padding-top: 110px;
+    padding-left: 310px;
+}
