--- a/project-react-app/src/components/SideBar/SideBar.css
+++ b/project-react-app/src/components/SideBar/SideBar.css
@@ -6,4 +6,14 @@
     width: 200px;
     height: 100%;
     border-right: 1px solid #ccc;
+
+
+
+}
+
+.SideBar ul {
+    list-style: none;
+    position: absolute;
+    width: 150px;
+    padding: 20px;
 }
